--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- Jumbotron -->
     <section class="jumbotron text-center mt-5">
       <img src="images/pp1.jpg" alt="Prasanti Laksita Karimah" width="300" class="rounded-circle img-thumbnail" />
-      <h1 class="display-4 mt-3">Prasanti Laksita Karimah, S. P.</h1>
+      <h1 class="display-4 mt-3"><strong>Prasanti Laksita Karimah, S. P.</strong></h1>
       <hr style="border: none; width: 80%; max-width: 600px; height: 3px; background-color: #000000; margin: 0 auto 0.5rem auto; display: block" />
       <p class="lead">Owner Marching Band Sebelas Maret Surakarta (MB UNS)</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
@@ -82,7 +82,7 @@
         </div>
         <div class="row">
           <div class="col-md-4 pb-3">
-            <div class="card shadow-lg">
+            <div class="card shadow-lg text-white">
               <img src="images/pj11.jpg" class="card-img-top" alt="..." />
               <div class="card-body">
                 <p class="card-text">Saya aslinya suka memacul dan menanam tanaman, yang mana menjadi latar belakang Saya juga untuk mendaftar di fakultas pertanian.</p>
@@ -90,7 +90,7 @@
             </div>
           </div>
           <div class="col-md-4 pb-3">
-            <div class="card shadow-lg">
+            <div class="card shadow-lg text-white">
               <img src="images/pj21.jpg" class="card-img-top" alt="..." />
               <div class="card-body">
                 <p class="card-text">Saya hobi makan tetapi tidak kuat makan banyak. Saya lebih suka makanan ringan dan murah untuk bertahan hidup semasa kuliah.</p>
@@ -98,7 +98,7 @@
             </div>
           </div>
           <div class="col-md-4">
-            <div class="card shadow-lg">
+            <div class="card shadow-lg text-white">
               <img src="images/pj31.jpg" class="card-img-top" alt="..." />
               <div class="card-body">
                 <p class="card-text">Setelah Saya makan dan menunggu tanaman saya tumbuh dan berkembang, waktu luang Saya isi dengan aktivitas produktif seperti tidur bablas.</p>
@@ -119,39 +119,38 @@
     <!-- Contact -->
     <section id="contact">
       <div class="container">
-        <div class="row text-center mb-5">
+        <div class="row text-center mb-3">
           <div class="col">
             <h2>Contact Me</h2>
           </div>
         </div>
         <div class="row">
-          <div class="col-md-5">
+          <div class="col text-center justify-content-center">
             <div class="social-links">
+              <div class="col"></div>
               <a href="https://mail.google.com/mail/?view=cm&fs=1&to=prasanti_laksita@student.uns.ac.id" target="_blank" rel="noopener" aria-label="Email UNS" class="me-3 text-decoration-none">
                 <i class="bi bi-envelope-fill"></i> prasanti_laksita
               </a>
-              <br />
               <a href="https://web.facebook.com/prasantilaksita" target="_blank" rel="noopener" aria-label="Facebook UNS" class="me-3 text-decoration-none"> <i class="bi bi-facebook"></i> prasantilaksita </a>
-              <br />
               <a href="https://x.com/prhasantie" target="_blank" rel="noopener" aria-label="Twitter UNS" class="me-3 text-decoration-none"> <i class="bi bi-twitter"></i> prhasantie </a>
-              <br />
               <a href="https://www.instagram.com/snxinne/" target="_blank" rel="noopener" aria-label="Instagram UNS" class="me-3 text-decoration-none"> <i class="bi bi-instagram"></i> snxinne </a>
             </div>
-            <a href="https://wa.me/+628976219777" class="btn mt-3" target="_blank" rel="noopener" style="background-color: #4b352a; color: #fff">Info Loker!</a>
+            <a href="https://wa.me/+628976219777" class="btn mt-4" target="_blank" rel="noopener" style="background-color: #4b352a; color: #fff">Info Loker!</a>
           </div>
-
-          <div class="col-md-7">
-            <div class="ratio ratio-16x9">
-              <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3955.183271360782!2d110.85527107605257!3d-7.554985674601703!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7a16febbc65777%3A0x9ba7f11d4efc43ea!2sMarching%20Band%20Sebelas%20Maret!5e0!3m2!1sen!2sid!4v1748448575519!5m2!1sen!2sid"
-                width="800"
-                height="400"
-                style="border: 0"
-                allowfullscreen=""
-                loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"
-              ></iframe>
-            </div>
+        </div>
+      </div>
+      <div class="row justify-content-center mt-5">
+        <div class="col-md-6">
+          <div class="ratio ratio-21x9">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3955.183222673102!2d110.85527107594571!3d-7.554990992458755!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7a16febbc65777%3A0x9ba7f11d4efc43ea!2sMarching%20Band%20Sebelas%20Maret!5e0!3m2!1sen!2sid!4v1748484350739!5m2!1sen!2sid"
+              width="900"
+              height="300"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
           </div>
         </div>
       </div>
