--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </div>
         <div class="row">
           <div class="col-md-4 pb-3">
-            <div class="card shadow-lg text-white">
+            <div class="card shadow-lg text-black">
               <img src="images/pj11.jpg" class="card-img-top" alt="..." />
               <div class="card-body">
                 <p class="card-text">Saya aslinya suka memacul dan menanam tanaman, yang mana menjadi latar belakang Saya juga untuk mendaftar di fakultas pertanian.</p>
