--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
     <!-- Jumbotron -->
     <section class="jumbotron text-center mt-5">
       <img src="images/pp1.jpg" alt="Prasanti Laksita Karimah" width="300" class="rounded-circle img-thumbnail" />
-      <h1 class="display-4 mt-3"><strong>Prasanti Laksita Karimah, S. P.</strong></h1>
+      <h1 class="display-4 mt-3 fw-bolder">Prasanti Laksita Karimah, S. P.</h1>
       <hr style="border: none; width: 80%; max-width: 600px; height: 3px; background-color: #000000; margin: 0 auto 0.5rem auto; display: block" />
-      <p class="lead">Owner Marching Band Sebelas Maret Surakarta (MB UNS)</p>
+      <p class="lead fw-medium">Owner Marching Band Sebelas Maret Surakarta (MB UNS)</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#F0F2BD"
@@ -50,7 +50,7 @@
             <h2>About Me</h2>
           </div>
         </div>
-        <div class="row justify-content-center fs-5 text-center">
+        <div class="row justify-content-center fs-5 fw-normal text-center">
           <div class="col-md-5">
             <p>
               Saya adalah mahasiswa lulusan Agroteknologi dari Universitas Sebelas Maret, Fakultas Pertanian. Selama masa studi, saya fokus mempelajari ilmu pertanian secara mendalam dengan pendekatan teknologi yang modern dan
